# WinCodexBar

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
Scripts/: build.ps1  check_ts.py  check_zh.py  find_remaining.py  fix_token.py  fix_zh.ps1  fix_zh_batch2.py  fix_zh_batch3.py  fix_zh_batch4.py  fix_zh_cn.py  fix_zh_full.py  list_unfinished.py  list_unfinished2.py  sign.ps1  strip_unfinished.py  test_kimi_api.ps1
build_vs2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  WinCodexBar.sln  WinCodexBar.vcxproj  WinCodexBar.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  codexbar_core.vcxproj  codexbar_core.vcxproj.filters  translations.vcxproj  translations.vcxproj.filters
build_vs2019/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
build_vs2019/codexbar_core_autogen/: mocs_compilation_Debug.cpp
build_vs2019/tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  tst_ConPTYSession.vcxproj  tst_ConPTYSession.vcxproj.filters  tst_CookieImporter.vcxproj  tst_CookieImporter.vcxproj.filters  tst_CostUsageScanner.vcxproj  tst_CostUsageScanner.vcxproj.filters  tst_FetchContext.vcxproj  tst_FetchContext.vcxproj.filters  tst_Localization.vcxproj  tst_Localization.vcxproj.filters  tst_PerProviderCostUsage.vcxproj  tst_PerProviderCostUsage.vcxproj.filters  tst_ProviderPipeline.vcxproj  tst_ProviderPipeline.vcxproj.filters  tst_RateWindow.vcxproj  tst_RateWindow.vcxproj.filters  tst_TextParser.vcxproj  tst_TextParser.vcxproj.filters  tst_UsagePace.vcxproj  tst_UsagePace.vcxproj.filters  tst_ZaiProvider.vcxproj  tst_ZaiProvider.vcxproj.filters
build_vs2019/translations/: WinCodexBar_en.qm  WinCodexBar_zh_CN.qm
docs/: CODEX_PROVIDER.md  E2E_TESTING.md  WINCODEXBAR_IMPLEMENTATION_REVIEW.md  upstream-feature-gap.md
qml/: AppTheme.qml  Main.qml  PlanUtilizationChart.qml  SettingsWindow.qml  TrayPanel.qml  UsageCard.qml  UsageWindow.qml
qml/components/: CodexAccountsPane.qml  ConnectionStatus.qml  ProgressMeter.qml  ProviderDetailView.qml  ProviderErrorCard.qml  ProviderListItem.qml  SecretInput.qml  SettingsButton.qml  SettingsComboBox.qml  SettingsGroupBox.qml  SettingsPage.qml  SettingsSectionHeader.qml  SettingsSwitch.qml  SettingsToggleRow.qml  TokenAccountsPane.qml  UsageProgressBar.qml
qml/panes/: AboutPane.qml  AdvancedPane.qml  DebugPane.qml  DisplayPane.qml  GeneralPane.qml  ProvidersPane.qml  TokenUsagePane.qml
resources/: qml.qrc  wincodexbar.rc
src/: main.cpp
src/account/: SecureString.h  TokenAccount.h  TokenAccountCredentials.h  TokenAccountStore.cpp  TokenAccountStore.h
src/app/: AppTheme.cpp  AppTheme.h  BatchUpdateController.cpp  BatchUpdateController.h  CodexBarApp.cpp  CodexBarApp.h  CredentialAccessGate.cpp  CredentialAccessGate.h  LanguageManager.cpp  LanguageManager.h  Localization.cpp  Localization.h  PlanUtilizationHistoryStore.cpp  PlanUtilizationHistoryStore.h  SessionQuotaNotifications.cpp  SessionQuotaNotifications.h  SettingsStore.cpp  SettingsStore.h  UsageStore.cpp  UsageStore.h
src/cli/: CLIConfigCommand.cpp  CLIConfigCommand.h  CLICostCommand.cpp  CLICostCommand.h  CLIEntry.cpp  CLIEntry.h  CLIRenderer.cpp  CLIRenderer.h  CLIUsageCommand.cpp  CLIUsageCommand.h
src/models/: ClaudeUsageSnapshot.cpp  ClaudeUsageSnapshot.h  CodexUsageResponse.cpp  CodexUsageResponse.h  CostUsageReport.h  CreditsSnapshot.cpp  CreditsSnapshot.h  CursorRequestUsage.h  CursorUsageSummary.cpp  CursorUsageSummary.h  MiniMaxUsageSnapshot.cpp  MiniMaxUsageSnapshot.h  OpenRouterUsageSnapshot.cpp  OpenRouterUsageSnapshot.h  PlanUtilizationHistory.cpp  PlanUtilizationHistory.h  ProviderCostSnapshot.cpp  ProviderCostSnapshot.h  ProviderDescriptor.cpp  ProviderDescriptor.h  ProviderIdentitySnapshot.cpp  ProviderIdentitySnapshot.h  RateWindow.cpp  RateWindow.h  UsagePace.cpp  UsagePace.h  UsageSnapshot.cpp  UsageSnapshot.h  WidgetSnapshot.cpp  WidgetSnapshot.h  ZaiUsageSnapshot.cpp  ZaiUsageSnapshot.h
src/network/: NetworkManager.cpp  NetworkManager.h
src/providers/: IFetchStrategy.h  IProvider.h  ProviderBootstrap.cpp  ProviderBootstrap.h  ProviderFetchAttempt.h  ProviderFetchContext.h  ProviderFetchKind.h  ProviderFetchResult.h  ProviderPipeline.cpp  ProviderPipeline.h  ProviderRegistry.cpp  ProviderRegistry.h  ProviderSettingsSnapshot.h  ProviderSourceMode.h
src/runtime/: AugmentRuntime.cpp  AugmentRuntime.h  CodexRuntime.cpp  CodexRuntime.h  GenericRuntime.cpp  GenericRuntime.h  IProviderLoginFlow.cpp  IProviderLoginFlow.h  IProviderRuntime.cpp  IProviderRuntime.h  OAuthDeviceFlow.cpp  OAuthDeviceFlow.h  (+2 more)
tests/: CMakeLists.txt  opencode_debug_test.cpp  tst_AbacusProvider.cpp  tst_AmpProvider.cpp  tst_AppTheme.cpp  tst_AugmentProvider.cpp  tst_CLI.cpp  tst_CodebuffProvider.cpp  tst_CodexLoginRunner.cpp  tst_CodexProvider.cpp  tst_ConPTYSession.cpp  tst_CookieImporter.cpp  tst_CostUsageCache.cpp  tst_CostUsageScanner.cpp  tst_DeepSeekProvider.cpp  tst_FactoryProvider.cpp  tst_FetchContext.cpp  tst_GeminiProvider.cpp  tst_JetBrainsProvider.cpp  tst_KimiProvider.cpp  tst_Localization.cpp  tst_MiniMaxProvider.cpp  tst_OpenCodeGoProvider.cpp  tst_PerProviderCostUsage.cpp  tst_PerplexityProvider.cpp  tst_ProviderBootstrap.cpp  tst_ProviderPipeline.cpp  tst_ProviderRuntime.cpp  tst_QmlSmoke.cpp  tst_RateWindow.cpp  tst_SingleInstanceGuard.cpp  tst_SyntheticProvider.cpp  tst_TextParser.cpp  tst_TextParser.h  tst_TokenAccountStore.cpp  tst_UsagePace.cpp  tst_VertexAIProvider.cpp  tst_WarpProvider.cpp  tst_WindsurfProvider.cpp  tst_ZaiProvider.cpp
tests/Fixtures/codex/: device-auth-403.txt
tests/Fixtures/cost_usage/codex/: session.jsonl
tests/e2e/: CMakeLists.txt  E2ETestUtils.cpp  E2ETestUtils.h  opencode_diag.cpp  tst_E2E_Codex.cpp  tst_E2E_Copilot.cpp  tst_E2E_Kimi.cpp  tst_E2E_OpenCode.cpp  tst_E2E_OpenCodeGo.cpp
translations/: WinCodexBar_en.ts  WinCodexBar_zh_CN.qm  WinCodexBar_zh_CN.ts
(+357 files in other folders)
